overflow-y and z-index problem fixed, for lab1

--- a/lab 1/css/index_page/global_style.css
+++ b/lab 1/css/index_page/global_style.css
@@ -4,7 +4,7 @@
 
 body {
     margin: 0;
-    overflow-x: hidden;
+    z-index: 1;
 }
 
 .linear_gradient_area {
@@ -18,9 +18,14 @@ body {
 #content {
     width: 100%;
     height: 3257px;
+    max-height: 3257px;
     display: flex;
     flex-direction: column;
     align-items: center;
+    position: relative;
+    overflow-y: hidden;
+    overflow-x: hidden;
+    z-index: 10;
 }
 
 .hover-underline-animation {
