--- a/lab 1/css/index_page/header.css
+++ b/lab 1/css/index_page/header.css
@@ -3,6 +3,7 @@ header {
     justify-content: space-around;
     flex-direction: row;
     position: fixed;
+    z-index: 11;
     top: 0;
     width: 100%;
     height: 50px;
