--- a/lab 1/css/news_page/global_style.css
+++ b/lab 1/css/news_page/global_style.css
@@ -13,6 +13,7 @@ body {
   height: 600px;
   background: linear-gradient(49.08deg, rgba(65, 88, 208, 0.5) 3.31%, rgba(200, 80, 192, 0.5) 57.52%, rgba(255, 204, 112, 0.5) 91.12%);
   filter: blur(150px);
+  z-index: 1;
 }
 
 #content {
@@ -20,6 +21,7 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
+    z-index: 10;
 }
 
 .hover-underline-animation {
